FIX | fixed responsivity of header logo & burger menu on mobile v4

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -7205,8 +7205,7 @@ blockquote p {
   }
   .logo-text-container {
     margin-top: 0px;
-    max-width: 254px;
-    height: 82px;
+    max-width: 253px;
     padding: 0px !important;
     margin: 0px !important;
   }
@@ -7226,8 +7225,7 @@ blockquote p {
   }
   .logo-text-container {
     margin-top: 0px;
-    max-width: 308px;
-    height: 82px;
+    max-width: 300px;
     padding: 0px !important;
     margin: 0px !important;
   }
